# network_connectivity_queries

./: .gitignore  README.md  all_nodes.txt  compound_trivname_map.tsv  download_networks.sh  ko_metabolite_map.csv  ko_metabolite_map.tsv  neighborhoods.csv  network_ids_to_operate_on.txt  print_cytoscape_commands.sh  pyproject.toml  queried_network_results.csv  run_me_with_command_run.txt  seeds.txt
aux_scripts/: download_networks.sh  export_networks.sh  print_cytoscape_commands.sh  queried_network_results.csv  query_network.sh  run_me_with_command_run.txt
master_network/: master_network.graphml
network_queries/: main.py  network_utils.py  prepare_networks.py
networks/: bvu00010.xml  bvu00020.xml  bvu00030.xml  bvu00040.xml  bvu00051.xml  bvu00052.xml  bvu00053.xml  bvu00061.xml  bvu00071.xml  bvu00121.xml  bvu00130.xml  bvu00190.xml  bvu00220.xml  bvu00230.xml  bvu00240.xml  bvu00250.xml  bvu00260.xml  bvu00261.xml  bvu00270.xml  bvu00280.xml  bvu00290.xml  bvu00300.xml  bvu00330.xml  bvu00332.xml  bvu00340.xml  bvu00350.xml  bvu00360.xml  bvu00362.xml  bvu00400.xml  bvu00401.xml  bvu00410.xml  bvu00430.xml  bvu00440.xml  bvu00450.xml  bvu00460.xml  bvu00470.xml  bvu00480.xml  bvu00500.xml  bvu00511.xml  bvu00520.xml  (+187 more)
networks_graphml/: Aminoacyl-tRNA biosynthesis [bvu00970].graphml  Biosynthesis of various nucleotide sugars [bvu00541].graphml  Biosynthesis of various plant secondary metabolites [bvu00999].graphml  C5-Branched dibasic acid metabolism [bvu00660].graphml  Carbon fixation by Calvin cycle [bvu00710].graphml  Citrate cycle (TCA cycle) [bvu00020].graphml  (+128 more)
(+183 files in other folders)
