[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "query_kegg_networks"
version = "0.0.2"
authors = [
  { name="Nicolai Karcher", email="karchernic@gmail.com.com" },
]
description = "A package to query KEGG networks"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "networkx",
    "click",
    "pandas"
]

[project.scripts]
query_kegg_networks = "query_kegg_networks.main:cli"